--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   flutter_bloc: ^7.0.1
   uuid: ^3.0.4
   json_annotation: ^4.0.1
-  win32: ^2.1.1
+  win32: ^2.1.3
+  filepicker_windows: ^2.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  split_view: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +50,7 @@ dev_dependencies:
 
   json_serializable: ^4.1.3
   build_runner: ^2.0.4
+  hive_generator: ^1.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
