--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,16 @@ dependencies:
   flutter_bloc: ^7.0.1
   uuid: ^3.0.4
   json_annotation: ^4.0.1
-  win32: ^2.1.3
+  win32: ^2.1.5
   filepicker_windows: ^2.0.0
   hive: ^2.0.4
   hive_flutter: ^1.0.0
-  split_view: ^3.0.0
+  split_view: ^3.1.0
+  obs_websocket: ^2.1.1
+  socket_io: ^1.0.0
+  desktop_window: ^0.4.0
+  flutter_colorpicker: ^0.4.0
+  unicode: ^0.3.0
 
 dev_dependencies:
   flutter_test:
