--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,29 +33,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
-  flutter_bloc: ^7.0.1
-  uuid: ^3.0.4
-  json_annotation: ^4.0.1
-  win32: ^2.1.5
-  filepicker_windows: ^2.0.0
-  hive: ^2.0.4
-  hive_flutter: ^1.0.0
+  cupertino_icons: ^1.0.4
+  flutter_bloc: ^8.0.1
+  uuid: ^3.0.5
+  json_annotation: ^4.4.0
+  win32: ^2.3.9
+  filepicker_windows: ^2.0.1
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
   split_view: ^3.1.0
-  obs_websocket: ^2.1.1
-  socket_io: ^1.0.0
+  obs_websocket: ^2.2.12
+  socket_io: ^1.0.1
   desktop_window: ^0.4.0
-  flutter_colorpicker: ^0.4.0
-  unicode: ^0.3.0
+  flutter_colorpicker: ^1.0.3
+  unicode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  json_serializable: ^4.1.3
-  build_runner: ^2.0.4
-  hive_generator: ^1.1.0
+  json_serializable: ^6.1.4
+  build_runner: ^2.1.7
+  hive_generator: ^1.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.2
+  msix: ^2.8.17
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -105,3 +106,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+msix_config:
+  display_name: StreamBerry
+  publisher_display_name: Florian
+  identity_name: one.unfug.streamberry
+  msix_version: 1.0.0.0
+  capabilities: "internetClient,location,microphone,webcam"
